src/test/ui/borrowck/promote-ref-mut-in-let-issue-46557.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-ref-mut-in-let-issue-46557.rs:5:21
   |
LL |     let ref mut x = 1234543;
   |                     ^^^^^^^ creates a temporary which is freed while still in use
LL |     x
   |     - borrow later used here
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-ref-mut-in-let-issue-46557.rs:10:25
   |
LL |     let (ref mut x, ) = (1234543, );
   |                         ^^^^^^^^^^^ creates a temporary which is freed while still in use
LL |     x
   |     - borrow later used here
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-ref-mut-in-let-issue-46557.rs:15:11
   |
LL |     match 1234543 {
   |           ^^^^^^^ creates a temporary which is freed while still in use
...
LL | }
   | -- borrow later used here
   | |
   | temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-ref-mut-in-let-issue-46557.rs:21:11
   |
LL |     match (123443,) {
   |           ^^^^^^^^^ creates a temporary which is freed while still in use
...
LL | }
   | -- borrow later used here
   | |
   | temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-ref-mut-in-let-issue-46557.rs:27:10
   |
LL |     &mut 1234543
   |          ^^^^^^^ creates a temporary which is freed while still in use
LL | }
   | -- borrow later used here
   | |
   | temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0716`.
